[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts1/Robot/Robot_swarm2.gd" type="Script" id=1]
[ext_resource path="res://scenes/Robot/Area2D.gd" type="Script" id=2]
[ext_resource path="res://assets/misc/health_bar_red.png" type="Texture" id=3]
[ext_resource path="res://assets/space/Enemies/enemyBlack5.png" type="Texture" id=4]
[ext_resource path="res://assets/misc/health_bar_green.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 46.5, 40.5 )

[node name="Robot_Swarm2" type="KinematicBody2D" groups=["robots"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="Pos" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="." groups=["robots"]]
collision_layer = 2
collision_mask = 13
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 46, 40 )
shape = SubResource( 1 )

[node name="DieTimer" type="Timer" parent="."]

[node name="Posit" type="Label" parent="."]
margin_left = -11.0
margin_top = -16.0
margin_right = 85.0
margin_bottom = -2.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_bar" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP_bar2" type="TextureProgress" parent="."]
margin_left = -1.0
margin_top = 86.0
margin_right = 95.0
margin_bottom = 91.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="DieTimer" to="." method="_on_DieTimer_timeout"]
